
Table status {
  id integer [pk]
  name varchar [unique, not null]
}

Table category {
  id integer [pk]
  name varchar [unique, not null]
}

Table priority {
  id integer [pk]
  name varchar [unique, not null]
  order_index integer
}

//// -------------------------------------
//// CORE ENTITIES
//// -------------------------------------

Table student {
  id integer [pk]
  name varchar [not null]
  email varchar [unique, not null]
}

Table module {
  id integer [pk]
  name varchar [not null]
}

//// -------------------------------------
//// TASK TABLE
//// -------------------------------------

Table task {
  id integer [pk]
  title varchar [not null]
  description text
  due_date date
  created_at timestamp [not null, default: `now()`]

  student_id integer [not null, ref: > student.id]
  module_id integer [ref: > module.id]
  priority_id integer [not null, ref: > priority.id]
  category_id integer [not null, ref: > category.id]
  status_id integer [not null, ref: > status.id]
}